--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^12.23.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "vite": "^4.5.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -25,7 +26,6 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "globals": "^16.0.0"
   }
 }
